--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -31,9 +31,17 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build
+          pip install build setuptools wheel
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Build package
+        run: |
+          python -m build
+          echo "Package version $(python setup.py --version)"
+
+      - name: List build directory
+        run: ls -la dist/
+        shell: bash
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
