--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,11 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
+name = "dummy-package"
+version = "4.2.2"
 
 authors = [
-  { name="Example Author", email="author@example.com" },
+  { name="mehul Saxena ", email="author@example.com" },
 ]
 description = "A small example package"
 readme = "README.md"
