--- a/.github/workflows/realease_package.yml
+++ b/.github/workflows/realease_package.yml
@@ -26,16 +26,38 @@ jobs:
 
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v4
+        uses: actions/github-script@v7
         with:
-          name: python-package
-          path: dist
+          script: |
+            const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: context.payload.workflow_run.id,
+            });
+            const matchArtifact = artifacts.data.artifacts.find((artifact) => {
+              return artifact.name === 'python-package'
+            });
+            if (!matchArtifact) {
+              throw new Error('No artifact found');
+            }
+            const download = await github.rest.actions.downloadArtifact({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              artifact_id: matchArtifact.id,
+              archive_format: 'zip'
+            });
+            const fs = require('fs');
+            fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/artifact.zip`, Buffer.from(download.data));
+
+      - name: Unzip artifact
+        run: |
+          mkdir -p dist
+          unzip artifact.zip -d dist
 
       - name: List directory contents
         run: ls -la dist/
         shell: bash
 
-      # FIX: Add Cloudsmith CLI Setup
       - name: Install Cloudsmith CLI
         uses: cloudsmith-io/cloudsmith-cli-action@v1.0.1
         with:
