--- a/.github/workflows/realease_package.yml
+++ b/.github/workflows/realease_package.yml
@@ -59,10 +59,9 @@ jobs:
         shell: bash
 
       - name: Install Cloudsmith CLI
-        uses: cloudsmith-io/cloudsmith-cli-action@v1.0.1
-        with:
-          oidc-namespace: ${{ env.CLOUDSMITH_NAMESPACE }}
-          oidc-service-slug: ${{ env.CLOUDSMITH_SERVICE_SLUG }}
+        run: |
+          pip install --upgrade cloudsmith-cli
+          cloudsmith configure api-key ${{ secrets.CLOUDSMITH_API_KEY }}
 
       - name: Push package to Cloudsmith
         run: |
