--- a/.github/workflows/realease_package.yml
+++ b/.github/workflows/realease_package.yml
@@ -14,8 +14,10 @@ env:
   CLOUDSMITH_SERVICE_SLUG: ${{ vars.CLOUDSMITH_SERVICE_SLUG }}
 
 permissions:
-  id-token: write  # ✅ Required for OIDC Authentication
-  contents: read   # ✅ Required for actions/checkout
+  contents: read
+  actions: read
+  id-token: write
+  packages: write
 
 jobs:
   publish:
@@ -23,14 +25,34 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
       - name: Download artifact
-        uses: actions/download-artifact@v4
+        uses: actions/github-script@v7
         with:
-          name: python-package
-          path: dist
+          script: |
+            const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: context.payload.workflow_run.id,
+            });
+            const matchArtifact = artifacts.data.artifacts.find((artifact) => {
+              return artifact.name === 'python-package'
+            });
+            if (!matchArtifact) {
+              throw new Error('No artifact found');
+            }
+            const download = await github.rest.actions.downloadArtifact({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              artifact_id: matchArtifact.id,
+              archive_format: 'zip'
+            });
+            const fs = require('fs');
+            fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/artifact.zip`, Buffer.from(download.data));
+
+      - name: Unzip artifact
+        run: |
+          mkdir -p dist
+          unzip artifact.zip -d dist
 
       - name: List directory contents
         run: ls -la dist/
