--- a/.github/workflows/realease_package.yml
+++ b/.github/workflows/realease_package.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Install Cloudsmith CLI
         run: |
           pip install --upgrade cloudsmith-cli
-                  
+
       - name: Authenticate with Cloudsmith (OIDC)
         id: auth
         run: |
@@ -78,10 +78,21 @@ jobs:
           # Store the Cloudsmith token as an environment variable
           echo "CLOUDSMITH_API_KEY=$cloudsmith_token" >> $GITHUB_ENV
 
+      - name: Find the Built Package
+        id: find_package
+        run: |
+          PACKAGE_FILE=$(ls dist/*.tar.gz dist/*.whl 2>/dev/null | head -n 1)
+          if [ -z "$PACKAGE_FILE" ]; then
+            echo "❌ No package file found in dist/"
+            exit 1
+          fi
+          echo "✅ Found package: $PACKAGE_FILE"
+          echo "PACKAGE_PATH=$PACKAGE_FILE" >> $GITHUB_ENV
+
       - name: Push Package to Cloudsmith
         run: |
           cloudsmith push python \
             ${{ env.CLOUDSMITH_NAMESPACE }}/${{ env.CLOUDSMITH_REPOSITORY }} \
-            dist/*
+            ${{ env.PACKAGE_PATH }}
         env:
           CLOUDSMITH_API_KEY: ${{ env.CLOUDSMITH_API_KEY }}
