--- a/.github/workflows/promote_package.yml
+++ b/.github/workflows/promote_package.yml
@@ -66,14 +66,14 @@ jobs:
 
       - name: Tag Package as Ready for Production
         run: |
-          echo "Processing package: $PACKAGE_IDENTIFIER"
+          echo "Processing package: "${{ github.event.client_payload.package_identifier }}"
 
           cloudsmith tags add \
-            ${{ env.CLOUDSMITH_NAMESPACE }}/${{ env.CLOUDSMITH_STAGING_REPO }}/$PACKAGE_IDENTIFIER \
+            ${{ env.CLOUDSMITH_NAMESPACE }}/${{ env.CLOUDSMITH_STAGING_REPO }}/"${{ github.event.client_payload.package_identifier }}"\
             ready-for-production
 
           if [ $? -eq 0 ]; then
-            echo "✅ Successfully tagged package: $PACKAGE_IDENTIFIER"
+            echo "✅ Successfully tagged package: ${{ github.event.client_payload.package_identifier }}"
           else
             echo "❌ Failed to tag package: $PACKAGE_IDENTIFIER"
             exit 1
