--- a/.github/workflows/promote_package.yml
+++ b/.github/workflows/promote_package.yml
@@ -70,8 +70,8 @@ jobs:
 
       - name: Add Tags to Cloudsmith Package
         run: |
-          cloudsmith tags add interview-mehul-saxena/interview-mehul-saxena/example_package-422-py3-none-anywhl-vxnu \
-          ready-for-production
+          cloudsmith tags add interview-mehul-saxena/interview-mehul-saxena/example_package-422-py3-none-anywhl-eb9n ready-for-production
+          
         env:
           CLOUDSMITH_API_KEY: ${{ vars.CLOUDSMITH_API_KEY }}
 
