--- a/.github/workflows/promote_package.yml
+++ b/.github/workflows/promote_package.yml
@@ -75,6 +75,7 @@ jobs:
           echo "$PACKAGE_DATA" | jq -r '.data[].identifier_perm' | while read -r IDENTIFIER; do
             if [ -n "$IDENTIFIER" ] && [ "$IDENTIFIER" != "null" ]; then
               echo "🚀 Promoting package: $IDENTIFIER"
+              cloudsmith whoami
               cloudsmith mv --yes interview-mehul-saxena/interview-mehul-saxena/"$IDENTIFIER" production
               
               if [ $? -eq 0 ]; then
@@ -87,4 +88,6 @@ jobs:
               echo "⚠️ No valid package identifiers found for promotion."
             fi
           done
+        env:
+          CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}  
         shell: bash
